--- a/notes/0.1.0.markdown
+++ b/notes/0.1.0.markdown
@@ -23,6 +23,12 @@ What is available in this release:
   respectively;
 * a converters library which provides a DSL for writing custom serializers in a declarative way.
 
+picopickle is heavily inspired by [upickle], but it does not do everything I needed, and I couldn't manage to fix it -
+there were compiler errors I didn't know how to overcome. shapeless, however, provide a lot of tools, including lazy
+implicits, which made writing a serialization library a very easy task.
+
+  [upickle]: https://github.com/lihaoyi/upickle
+
 You can find more in the [readme].
 
   [readme]: https://github.com/netvl/picopickle#readme
